--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+	<link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
-	<div>
+	<h1>Töötasu kokku: <span id="tot">0</span>€</h1>
+	<form id="form">
 		<select id="select" name=""> </select>
-		<input type="number" placeholder="tunnid">
-		<button>+</button>
-	</div>
+		<input id="num" type="number" placeholder="tunnid" value="1">
+		<input id="date" type="text" placeholder="kuupäev">
+		<button id="btn">+</button>
+	</form>
+	<div id="itemList"> </div>
 
 	<script src="script.js"></script>
 </body>
