added chart and some more stuff

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		<button id="btn">+</button>
 	</form>
 	<div id="itemList"> </div>
+	<canvas id="chart"></canvas>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
