fixed chart placement and colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<form id="form">
 		<select id="select" name=""> </select>
-		<input id="num" type="number" placeholder="tunnid" value="1">
+		<input id="num" type="text" placeholder="tunnid" value="1">
 		<input id="date" type="text" placeholder="kuupäev">
 		<button id="btn">+</button>
 	</form>
