--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
 	<div class="header">
 	<h1>Töötasu kokku: <span id="tot">0</span>€</h1>
-
 	<form id="form">
 		<select id="select" name=""> </select>
 		<input id="num" type="text" placeholder="tunnid" value="1">
 		<input id="date" type="text" placeholder="kuupäev">
-		<button id="btn">+</button>
+		<button type="submit" id="btn">+</button>
 	</form>
 	</div>
 	<div class="container">
