--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<h1>Töötasu kokku: <span id="tot">0</span>€</h1>
 
 	<form id="form">
-		<select id="select" name=""> </select>
-		<input id="num" type="number" placeholder="tunnid" value="1">
-		<input id="date" type="text" placeholder="kuupäev">
-		<button type="submit" id="btn">+</button>
+		<select class="selection" id="select" name=""> </select>
+		<input class="hours" id="num" type="number" placeholder="tunnid" value="1">
+		<input class="date" id="date" type="text" placeholder="kuupäev">
+		<button class="add" type="submit" id="btn">+</button>
 	</form>
 	</div>
 
-	<div id="errorlist"></div>
+	<div class="error" id="errorlist"></div>
 
 	<div class="container">
 		<div class="history">
