fixed stuff and made stuff better

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<h1>Töötasu kokku: <span id="tot">0</span>€</h1>
 
 	<form id="form">
-		<select class="selection" id="select" name=""> </select>
-		<input class="hours" id="num" type="number" placeholder="tunnid" value="1">
-		<input class="date" id="date" type="text" placeholder="kuupäev">
-		<button class="add" type="submit" id="btn">+</button>
+		<select class="input selection" id="select" name=""> </select>
+		<input class="input hours" id="num" type="number" placeholder="tunnid" value="1">
+		<input class="input date" id="date" type="text" placeholder="kuupäev">
+		<button class="input add" type="submit" id="btn">+</button>
 	</form>
 	</div>
 
