--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="container">
 		<div class="history">
-			<div id="itemList"></div>
+			<div class="itemslist" id="itemList"></div>
 		</div>
 		<div class="chart">
 			<canvas id="chart"></canvas>
